# GZHU-OS-CHATROOM-QT

./: CMakeLists.txt  ChatRoom.pro  PROJECT_STRUCTURE.md  build_cmake.sh  build_cmake.sh.in  chatserver.cpp  chatserver.h  database.cpp  database.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  messagefilter.cpp  registerdialog.cpp  run.sh  settingsdialog.cpp  start.sh  userinfo.cpp  userinfo.h  usermanagerdialog.cpp  usermanagerdialog.h
docs/: HISTORY_FIX.md  MESSAGE_PERSISTENCE_FIX.md  PROJECT_SUMMARY.md  README.md
scripts/: build.sh  build_cmake.sh  check_database.sh  run.sh  test.sh  test_history.sh
src/: main.cpp
src/core/: database.cpp  database.h  messagefilter.h
src/network/: chatclient.cpp  chatclient.h  chatserver.cpp
src/ui/dialogs/: registerdialog.cpp  registerdialog.h  settingsdialog.cpp  settingsdialog.h  usermanagerdialog.cpp
src/ui/windows/: loginwindow.cpp  mainwindow.cpp  mainwindow.h
